--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Contact - Business Casual - Start Bootstrap Theme</title>
+  <title>About - Business Casual - Start Bootstrap Theme</title>
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
@@ -66,26 +66,18 @@
       <div class="box">
         <div class="col-lg-12">
           <hr>
-          <h2 class="intro-text text-center">Contact
+          <h2 class="intro-text text-center">About
                         <strong>business casual</strong>
                     </h2>
           <hr>
         </div>
-        <div class="col-md-8">
-          <!-- Embedded Google Map using an iframe - to select your location find it on Google maps and paste the link as the iframe src. If you want to use the Google Maps API instead then have at it! -->
-          <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+        <div class="col-md-6">
+          <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
         </div>
-        <div class="col-md-4">
-          <p>Phone:
-            <strong>123.456.7890</strong>
-          </p>
-          <p>Email:
-            <strong><a href="mailto:name@example.com">name@example.com</a></strong>
-          </p>
-          <p>Address:
-            <strong>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</strong>
-          </p>
+        <div class="col-md-6">
+          <p>This is a great place to introduce your company or project and describe what you do.</p>
+          <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
+          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
         </div>
         <div class="clearfix"></div>
       </div>
@@ -94,37 +86,30 @@
       <div class="box">
         <div class="col-lg-12">
           <hr>
-          <h2 class="intro-text text-center">Contact
-                        <strong>form</strong>
+          <h2 class="intro-text text-center">Our
+                        <strong>Team</strong>
                     </h2>
           <hr>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, vitae, distinctio, possimus repudiandae cupiditate ipsum excepturi dicta neque eaque voluptates tempora veniam esse earum sapiente optio deleniti consequuntur eos voluptatem.</p>
-          <form role="form">
-            <div class="row">
-              <div class="form-group col-lg-4">
-                <label>Name</label>
-                <input type="text" class="form-control">
-              </div>
-              <div class="form-group col-lg-4">
-                <label>Email Address</label>
-                <input type="email" class="form-control">
-              </div>
-              <div class="form-group col-lg-4">
-                <label>Phone Number</label>
-                <input type="tel" class="form-control">
-              </div>
-              <div class="clearfix"></div>
-              <div class="form-group col-lg-12">
-                <label>Message</label>
-                <textarea class="form-control" rows="6"></textarea>
-              </div>
-              <div class="form-group col-lg-12">
-                <input type="hidden" name="save" value="contact">
-                <button type="submit" class="btn btn-default">Submit</button>
-              </div>
-            </div>
-          </form>
         </div>
+        <div class="col-sm-4 text-center">
+          <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+          <h3>John Smith
+                        <small>Job Title</small>
+                    </h3>
+        </div>
+        <div class="col-sm-4 text-center">
+          <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+          <h3>John Smith
+                        <small>Job Title</small>
+                    </h3>
+        </div>
+        <div class="col-sm-4 text-center">
+          <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+          <h3>John Smith
+                        <small>Job Title</small>
+                    </h3>
+        </div>
+        <div class="clearfix"></div>
       </div>
     </div>
   </div>
