--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <span class="icon-bar"></span>
         </button>
         <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-        <a class="navbar-brand" href="index.html">Business Casual</a>
+        <a class="navbar-brand" href="index.html">Brad Smith Trio</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -95,7 +95,7 @@
           <h2 class="brand-before">
                         <small>Welcome to</small>
                     </h2>
-          <h1 class="brand-name">Business Casual</h1>
+          <h1 class="brand-name">Brad Smith Trio</h1>
           <hr class="tagline-divider">
           <h2>
                         <small>By
