--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>About - Business Casual - Start Bootstrap Theme</title>
+  <title>Brad Smith Trio</title>
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
@@ -24,8 +24,8 @@
 </head>
 
 <body>
-  <div class="brand">Business Casual</div>
-  <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+  <div class="brand">Brad Smith Trio</div>
+  <div class="address-bar">Boston</div>
   <!-- Navigation -->
   <nav class="navbar navbar-default" role="navigation">
     <div class="container">
@@ -38,7 +38,7 @@
           <span class="icon-bar"></span>
         </button>
         <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-        <a class="navbar-brand" href="index.html">Business Casual</a>
+        <a class="navbar-brand" href="index.html">Brad Smith Trio</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
