--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 	<!-- Custom CSS -->
 	<link href="css/business-casual.css" rel="stylesheet">
 	<!-- Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
-	 rel="stylesheet" type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic"
-	 rel="stylesheet" type="text/css">
+	<link
+		href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+		rel="stylesheet" type="text/css">
+	<link
+		href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic"
+		rel="stylesheet" type="text/css">
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
@@ -114,7 +116,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<p>Copyright &copy; Smith Piano Services 2018</p>
+					<p>Copyright &copy; SmithPiano.com 2018</p>
 				</div>
 			</div>
 		</div>
